--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>houyijun.dynamic</groupId>
+	<groupId>io.github.houyijun</groupId>
 	<artifactId>zk-etcd-config</artifactId>
 	<version>0.1.0</version>
 	<packaging>jar</packaging>
 
-	<name>houyijun.dynamic.config</name>
+	<name>io.github.houyijun.config</name>
 	<url>https://github.com/houyijun/zk-etcd-config</url>
 
 	<properties>
